k8s/overlays/prod/deployment-celery-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jretirewise-celery
spec:
  template:
    spec:
      containers:
      - name: celery
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
